# robonix-client

./: .gitignore  README.md  pyproject.toml
docs/: linux-audio.md
src/robonix_client/: __init__.py  app.py  audio_bridge_control.py  audio_reverse_bridge.py  audio_server_control.py  cli.py  transport.py
src/robonix_client/audio_bridge/: __init__.py  server.py  server_web.py
src/robonix_client/audio_device_server/: __init__.py  requirements.txt  server.py  server_web.py
src/robonix_client/proto/: __init__.py  atlas_pb2.py  audio_pb2.py  executor_pb2.py  liaison_pb2.py  pilot_pb2.py  voiceprint_pb2.py
src/robonix_client/static/: app.js  index.html  styles.css
tests/: test_audio_barge_in.py  test_audio_server_control.py  test_audio_stream_generation.py  test_executor_plans.py  test_pcm.py  test_proto_runtime_compatibility.py  test_system_snapshot.py  test_transport_channel.py
