[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robonix-client"
version = "0.1.0"
description = "Client-facing Web GUI client for Robonix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "grpcio>=1.76",
  "protobuf>=6.31.1",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
audio = [
  "sounddevice>=0.4.6",
]

[project.scripts]
robonix-client = "robonix_client.cli:main"
robonix-client-audio-server = "robonix_client.audio_device_server.server_web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robonix_client = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
  "proto/*.py",
  "audio_device_server/*.py",
  "audio_device_server/requirements.txt",
]
